updates on talks

--- a/partials/talks.html
+++ b/partials/talks.html
@@ -104,6 +104,27 @@
 
 
 
+            <blockquote class="twitter-tweet" data-lang="en">
+                <p lang="en" dir="ltr">Our session w/ <a
+                        href="https://twitter.com/tkssharma?ref_src=twsrc%5Etfw">@tkssharma</a> on <a
+                        href="https://twitter.com/hashtag/Microservices?src=hash&amp;ref_src=twsrc%5Etfw">#Microservices</a>,
+                    <a href="https://twitter.com/hashtag/node?src=hash&amp;ref_src=twsrc%5Etfw">#node</a>.js &amp; <a
+                        href="https://twitter.com/hashtag/Docker?src=hash&amp;ref_src=twsrc%5Etfw">#Docker</a> begins in
+                    24 hrs. Have you registered yet? <a href="https://t.co/FY136BNJdA">https://t.co/FY136BNJdA</a> <a
+                        href="https://t.co/O3hvcY9fe3">pic.twitter.com/O3hvcY9fe3</a></p>&mdash; SRIJAN (@Srijan) <a
+                    href="https://twitter.com/Srijan/status/910171672082354176?ref_src=twsrc%5Etfw">September 19,
+                    2017</a>
+            </blockquote>
+
+
+            <blockquote class="twitter-tweet" data-lang="en">
+                <p lang="en" dir="ltr">My talk on es6 &amp; es7 with babel <a
+                        href="https://twitter.com/Srijan?ref_src=twsrc%5Etfw">@Srijan</a> <a
+                        href="https://t.co/mbijianR0t">pic.twitter.com/mbijianR0t</a></p>&mdash; Tarun Sharma
+                (@tkssharma) <a
+                    href="https://twitter.com/tkssharma/status/832848403491020803?ref_src=twsrc%5Etfw">February 18,
+                    2017</a>
+            </blockquote>
 
         </ul>
     </main>
