--- a/_includes/header_posts.html
+++ b/_includes/header_posts.html
@@ -1,4 +1,4 @@
-<div class="header-background" style="background: linear-gradient(to bottom right,rgba(209, 67, 72, .5),rgba(114, 166, 92, 1)), url({% if course.snippet.thumbnails.medium.url %}{{ course.snippet.thumbnails.medium.url }}{% endif %}{% if page.heroimage %}{{ page.heroimage }}{% endif %}); -webkit-filter: blur(8px); filter: blur(8px);"></div>
+<div class="header-background" style="background: linear-gradient(to bottom right,rgba(209, 67, 72, .5),rgba(114, 166, 92, 1)), url({% if course.snippet.thumbnails.maxres.url %}{{ course.snippet.thumbnails.maxres.url }}{% endif %}{% if page.heroimage %}{{ page.heroimage }}{% endif %}); -webkit-filter: blur(8px); filter: blur(8px);"></div>
 <section class="header-info">
   {% include post_categories.html %}
   <div class="header-published">{% if page.conference_date %}{{page.conference_date}}{% else %}Published <time datetime="{{ page.date | date: '%B %d, %Y' }}">{{ page.date | date_to_string }}</time>{% endif %}</div>
