--- a/_sass/core/_variables.sass
+++ b/_sass/core/_variables.sass
@@ -2,8 +2,8 @@ $rs: 16px
 $preview-height: 400px
 $reading-width: 700px
 
-$font-serif: Merriweather, serif
-$font-sans: 'Open Sans', sans-serif
+$font-serif: 'Roboto', sans-serif
+$font-sans: 'Roboto', sans-serif
 $font-alternate: 'Bree Serif', serif
 
 $orange: #E76C5A
