global font updates

--- a/_sass/core/_variables.sass
+++ b/_sass/core/_variables.sass
@@ -26,6 +26,6 @@ $rs: 16px
 $reading-width: 700px
 $preview-height: 400px
 
-$font-serif: Merriweather, serif
-$font-sans: 'Open Sans', sans-serif
+$font-serif: 'Roboto', sans-serif
+$font-sans: 'Roboto', sans-serif
 $font-alternate: 'Bree Serif', serif
