--- a/_sass/partials/_base.sass
+++ b/_sass/partials/_base.sass
@@ -5,8 +5,8 @@ $rs: 16px
 $reading-width: 700px
 $preview-height: 400px
 
-$font-serif: Merriweather, serif
-$font-sans: 'Open Sans', sans-serif
+$font-serif: 'Roboto', sans-serif
+$font-sans: 'Roboto', sans-serif
 $font-alternate: 'Bree Serif', serif
 
 $orange: #E76C5A
